--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input type="number" id="input_height" name="height" min="1" value="1">
         Grid Width:
         <input type="number" id="input_width" name="width" min="1" value="1">
-        <input type="submit">
+        <input class="button" type="submit" value="Make Grid">
     </form>
 
     <h2>Pick A Color</h2>
@@ -23,6 +23,8 @@
     <h2>Design Canvas</h2>
     <table id="pixel_canvas"></table>
 
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="designs.js"></script>
 </body>
 </html>
