--- a/index.html
+++ b/index.html
@@ -2,30 +2,47 @@
 <html>
 <head>
     <title>Pixel Art Maker!</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Press+Start+2P" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Lab: Pixel Art Maker</h1>
+    <div class="header">
 
-    <h2>Choose Grid Size</h2>
-    <form id="sizePicker">
-        Grid Height:
-        <input type="number" id="input_height" name="height" min="1" value="1">
-        Grid Width:
-        <input type="number" id="input_width" name="width" min="1" value="1">
-        <input class="button" type="submit" value="Make Grid">
-    </form>
+        <div class="brand">
+            <h1 class="brand">Make Art<br><small>Pixel by Pixel</small></h1>
+        </div><!-- brand -->
 
-    <h2>Pick A Color</h2>
-    <input type="color" id="colorPicker">
+        <div class="toolbar">
+            <div class="canvas">
+                <h2>Create A Canvas</h2>
+            </div><!-- canvas-tool -->
+            <div class="canvas-tool">
+                <label><strong>H: </strong></label><input type="number" id="input_height" name="height" min="1" max="99" value="45">
+                <label><strong>W: </strong></label><input type="number" id="input_width" name="width" min="1" max="99" value="45">
+                <input class="button" type="submit" value="Pixelate!">
+            </div><!-- canvas-tool -->
+            <div class="palette">
+                 <h2>Pick A Color</h2>
+             </div><!-- color-tool -->
+            <div class="palette-tool">
+                <input type="color" id="colorPicker" value="#0000ff">
+            </div><!-- color-tool -->
+        </div><!-- toolbar -->
 
-    <h2>Design Canvas</h2>
-    <table id="pixel_canvas"></table>
+    </div><!-- header -->
+
+    <div class="content">
+        <table id="pixel_canvas">
+            <!-- table rows and cells will be created dynamically -->
+        </table>
+        <img src="pixel-minion.png">
+        <h3>Go on, make a Minion!</h3>
+    </div><!-- content -->
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="designs.js"></script>
+
 </body>
 </html>
 
