--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             </div><!-- canvas-tool -->
             <div class="palette">
                  <h2>Pick A Color</h2>
-             </div><!-- color-tool -->
+             </div><!-- palette-tool -->
             <div class="palette-tool">
                 <input type="color" id="colorPicker" value="#0000ff">
-            </div><!-- color-tool -->
+            </div><!-- palette-tool -->
         </div><!-- toolbar -->
 
     </div><!-- header -->
