--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
         <div class="toolbar">
             <div class="canvas">
                 <h2>Create A Canvas</h2>
-            </div><!-- canvas-tool -->
+            </div><!-- canvas -->
             <div class="canvas-tool">
-                <label><strong>H: </strong></label><input type="number" id="input_height" name="height" min="1" max="99" value="45">
-                <label><strong>W: </strong></label><input type="number" id="input_width" name="width" min="1" max="99" value="45">
+                <label><strong>H:</strong></label><input type="number" id="input_height" name="height" min="1" max="99" value="45">
+                <label><strong>W:</strong></label><input type="number" id="input_width" name="width" min="1" max="99" value="45">
                 <input class="button" type="submit" value="Pixelate!">
             </div><!-- canvas-tool -->
-            <div class="palette">
-                 <h2>Pick A Color</h2>
-             </div><!-- palette-tool -->
             <div class="palette-tool">
                 <input type="color" id="colorPicker" value="#0000ff">
             </div><!-- palette-tool -->
+            <div class="palette">
+                 <h2>Pick A Color</h2>
+            </div><!-- palette -->
         </div><!-- toolbar -->
 
     </div><!-- header -->
