--- a/index.html
+++ b/index.html
@@ -2,34 +2,34 @@
 <html>
 <head>
     <title>Pixel Art Maker!</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Press+Start+2P" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="header">
-
         <div class="brand">
             <h1 class="brand">Make Art<br><small>Pixel by Pixel</small></h1>
         </div><!-- brand -->
-
+        <div class="guide">
+            <ol>
+                <li>Create a canvas</li>
+                <li>Pick a color</li>
+                <li>Click or drag to draw</li>
+                <li>Double click to eraise</li>
+            </ol>
+        </div><!-- guide -->
         <div class="toolbar">
-            <div class="canvas">
-                <h2>Create A Canvas</h2>
-            </div><!-- canvas -->
-            <div class="canvas-tool">
+            <form class="canvas-tool">
                 <label><strong>H:</strong></label><input type="number" id="input_height" name="height" min="1" max="99" value="45">
                 <label><strong>W:</strong></label><input type="number" id="input_width" name="width" min="1" max="99" value="45">
                 <input class="button" type="submit" value="Pixelate!">
-            </div><!-- canvas-tool -->
-            <div class="palette-tool">
+                <label class="select-color">c:</label>
+            </form><!-- canvas-tool -->
+            <form class="palette-tool">
                 <input type="color" id="colorPicker" value="#0000ff">
-            </div><!-- palette-tool -->
-            <div class="palette">
-                 <h2>Pick A Color</h2>
-            </div><!-- palette -->
+            </form><!-- palette-tool -->
         </div><!-- toolbar -->
-
     </div><!-- header -->
+
 
     <div class="content">
         <table id="pixel_canvas">
