--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Pixel Art Maker!</title>
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -9,6 +10,7 @@
         <div class="brand">
             <h1 class="brand">Make Art<br><small>Pixel by Pixel</small></h1>
         </div><!-- brand -->
+
         <div class="guide">
             <ol>
                 <li>Create a canvas</li>
@@ -17,6 +19,7 @@
                 <li>Double click to eraise</li>
             </ol>
         </div><!-- guide -->
+
         <div class="toolbar">
             <form class="canvas-tool">
                 <label><strong>H:</strong></label><input type="number" id="input_height" name="height" min="1" max="99" value="45">
@@ -24,6 +27,7 @@
                 <input class="button" type="submit" value="Pixelate!">
                 <label class="select-color">c:</label>
             </form><!-- canvas-tool -->
+
             <form class="palette-tool">
                 <input type="color" id="colorPicker" value="#0000ff">
             </form><!-- palette-tool -->
@@ -35,7 +39,9 @@
         <table id="pixel_canvas">
             <!-- table rows and cells will be created dynamically -->
         </table>
+
         <img src="pixel-minion.png">
+
         <h3>Go on, make a Minion!</h3>
     </div><!-- content -->
 
